[package]
name = "nightlog-add"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_runtime = "0.6.0"
serde = {version = "1.0.197", features = ["derive"]}
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
chrono = {version="0.4.35", features=["serde"]}
mongodb = "3.2"
serde_json = "1.0.117"
nightlog-common = { path = "../../nightlog-common" }
